// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getFocusStyle() > should return correct css for opts: { offset: '3px', borderRadius: '6px' } 1`] = `
{
  "&:focus": {
    "outline": "2px solid #1A44EA",
    "outlineOffset": "3px",
  },
  "&:focus:not(:focus-visible)": {
    "outlineColor": "transparent",
  },
  "borderRadius": "6px",
}
`;

exports[`getFocusStyle() > should return correct css for opts: { offset: 'none', …(1) } 1`] = `
{
  "&:focus": {
    "outline": "2px solid #1A44EA",
    "outlineOffset": 0,
  },
  "&:focus:not(:focus-visible)": {
    "outlineColor": "transparent",
  },
  "borderRadius": "6px",
}
`;

exports[`getFocusStyle() > should return correct css for opts: { offset: 'small', …(1) } 1`] = `
{
  "&:focus": {
    "outline": "2px solid #1A44EA",
    "outlineOffset": "2px",
  },
  "&:focus:not(:focus-visible)": {
    "outlineColor": "transparent",
  },
  "borderRadius": "4px",
}
`;

exports[`getFocusStyle() > should return correct css for opts: { offset: undefined, …(1) } 1`] = `
{
  "&:focus": {
    "outline": "2px solid #1A44EA",
    "outlineOffset": "2px",
  },
  "&:focus:not(:focus-visible)": {
    "outlineColor": "transparent",
  },
  "borderRadius": "4px",
}
`;
